@@ -1,7 +1,11 @@
+2005-11-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection.hxx, src/connection.cxx:
+  - Fixed gcc 4.0 shared library link problem, thanks Axel Waggershauser
 2005-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configitems, configure.ac.in, src/util.cxx:
   - Greatly simplified strerror_r recognition.  Thanks Bart Samwel!
   - No longer need configuration items for different strerror_r versions
+  - Missing include: cstring
 2005-10-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - More work on strerror_r guessing logic
